[gd_scene load_steps=4 format=2]

[ext_resource path="res://Todo.gd" type="Script" id=1]
[ext_resource path="res://new_theme.tres" type="Theme" id=2]
[ext_resource path="res://Todo.tres" type="Theme" id=3]

[node name="Todo" type="Node2D"]
script = ExtResource( 1 )

[node name="task_input" type="LineEdit" parent="."]
margin_left = 43.0
margin_top = 150.0
margin_right = 222.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 109, 23 )
theme = ExtResource( 3 )
placeholder_text = "Digite sua tarefa"

[node name="add_button" type="Button" parent="."]
margin_left = 234.0
margin_top = 150.0
margin_right = 267.0
margin_bottom = 173.0
text = "+"

[node name="task_list3" type="VBoxContainer" parent="."]
visible = false
margin_left = 45.0
margin_top = 206.0
margin_right = 268.0
margin_bottom = 397.0
theme = ExtResource( 3 )
__meta__ = {
"_editor_description_": "Texte"
}

[node name="task_list" type="GridContainer" parent="."]
margin_left = 43.0
margin_top = 188.0
margin_right = 284.0
margin_bottom = 431.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 38.0
margin_top = 41.0
margin_right = 221.0
margin_bottom = 80.0
theme = ExtResource( 2 )
text = "THE todolist"
scroll_active = false

[connection signal="pressed" from="add_button" to="." method="_on_add_button_pressed"]
